[package]
name = "grpc-reflection-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.6"
